[gd_scene load_steps=5 format=3 uid="uid://djx2ybotdxggt"]

[ext_resource type="Script" path="res://Towers/arrow_tower.gd" id="1_6kvon"]
[ext_resource type="Texture2D" uid="uid://c5grpnqymw0mt" path="res://icon.svg" id="1_eikyj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8pcdv"]
radius = 325.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dbh71"]
size = Vector2(90, 90)

[node name="ArrowTower" type="Node2D"]
script = ExtResource("1_6kvon")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_eikyj")

[node name="Range" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_8pcdv")

[node name="Footprint" type="Area2D" parent="." groups=["Obstacle"]]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Footprint"]
shape = SubResource("RectangleShape2D_dbh71")

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_range_area_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
